--- a/musicly/appsettings.json
+++ b/musicly/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "musiclyContext": "Server=(localdb)\\mssqllocaldb;Database=musiclyContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
