--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,5 @@ MigrationBackup/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,dotnetcore
 musicly/Migrations/
+
+musicly/wwwroot/fonts/fontawesome-webfont.woff
